--- a/Code/EM17_Web/WebContent/registration-success.html
+++ b/Code/EM17_Web/WebContent/registration-success.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register - Brand</title>
+    <title>Registrazione  - EM '17</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
@@ -14,14 +14,14 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg bg-white clean-navbar">
-        <div class="container"><a class="navbar-brand logo" href="index.html" style="font-size:54px;padding:0px;margin:-16px;"><strong>EM'17</strong></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand logo" href="index.jsp" style="font-size:54px;padding:0px;margin:-16px;"><strong>EM'17</strong></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="features.html">CONCERTI</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="pricing.html">SPETTACOLO</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="product-page.html">SPORT</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="payment-page.html">CULTURA</a></li>
+                     <li class="nav-item" role="presentation"><a class="nav-link" href="SearchEvent2?param=Concerti">CONCERTI</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="SearchEvent2?param=Spettacolo">SPETTACOLO</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="SearchEvent2?param=Sport">SPORT</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="SearchEvent2?param=Cultura">CULTURA</a></li>
                 </ul>
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="login.html"><em>ACCEDI/REGISTRATI &nbsp;</em><i class="fa fa-user-circle-o"></i></a></li>
@@ -35,24 +35,9 @@
         <section class="clean-block clean-form dark">
             <div class="container">
                 <div class="block-heading">
-                    <h2 class="text-info">Registrazione</h2>
-                    <p>Registrati al nostro portale per accedere a tutte le funzionalità. Potrai effettuare acquisti, accedere alla tua area personale e scaricare i tuoi biglietti.</p>
-                </div>
-                <form><label><strong>DATI ANAGRAFICI</strong></label>
-                    <div class="form-group"><label for="name">Nome</label><input class="form-control item" type="text" inputmode="latin-name" id="name"></div>
-                    <div class="form-group"><label for="name">Cognome</label><input class="form-control item" type="text" inputmode="latin-name" id="name"></div>
-                    <div class="form-group"><label for="name">Telefono/Cellulare</label><input class="form-control item" type="text" inputmode="tel" id="name"></div>
-                    <div class="form-group"><label for="name">Sesso</label><select class="form-control" style="width:82px;"><option value="1" selected="">M</option><option value="2">F</option></select></div>
-                    <div class="form-group"><label for="name">Data nascita</label><input class="form-control" type="date" max="1999-09-20"></div>
-                    <div class="form-group"><label for="name">Città</label><input class="form-control item" type="text" inputmode="latin-name" id="name"></div>
-                    <div class="form-group"><label for="name">Provincia</label><input class="form-control item" type="text" inputmode="latin-name" id="name"></div>
-                    <div class="form-group"><label for="name">CAP</label><input class="form-control item" type="text" inputmode="numeric" id="name"></div><label><strong>DATI DI ACCESSO</strong></label>
-                    <div class="form-group"><label for="email">Email</label><input class="form-control item" type="text" inputmode="email" id="email"></div>
-                    <div class="form-group"><label for="password">Password</label><input class="form-control item" type="password" id="password"></div>
-                    <div class="form-group"><label for="password">Conferma Password</label><input class="form-control item" type="password" id="password"></div><button class="btn btn-primary btn-block" type="button">Conferma registrazione</button><label style="margin:8px;">Sei già registrato?</label>
-                    <a
-                        href="login.html">Clicca qui</a>
-                </form>
+                    <h2 class="text-info">Registrazione conclusa con successo!</h2>
+                    <p>Complimenti, la tua registrazione si è conclusa con successo.</p>
+                    <a href="login.jsp">Clicca qui per essere trasferito alla schermata di login</a></div>
             </div>
         </section>
     </main>
